--- a/pages/index.html
+++ b/pages/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script type="text/javascript" src="js/lib/jquery-1.11.1.min.js" ></script>
+
     <!-- tailwind -->
     <link href="/stylesheets/style.css" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    
+
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <title>GreekSite</title>
-</head>
+</head> 
+
 <body>
     <nav id='navbar' class='sticky flex flex-row h-24 px-52 shadow-lg bg-white justify-between items-center text-center w-full font-semibold text-black'>
 
